# mtklogo

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/resources/: logo.txt
cli/src/: main.rs
cli/src/command/: explore.rs  guess.rs  mod.rs  repack.rs  unpack.rs
cli/src/config/: mod.rs
resources/tests/: credits.txt
src/: lib.rs
src/mtk/: header.rs  logo.rs  mod.rs
src/utils/: image.rs  mod.rs  z_lib_flate2.rs  z_lib_libflate.rs
tests/: integration_test.rs
